--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   postgres:
     image: postgres:13
@@ -7,7 +6,7 @@ services:
       POSTGRES_PASSWORD: yourpassword
       POSTGRES_DB: yourdatabase
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
@@ -15,13 +14,18 @@ services:
     build:
       context: .
       dockerfile: ./services/url-shortener/Dockerfile
-    command: yarn run start:prod
+    command: sh -c "yarn migration:run && yarn run start:dev"
     volumes:
-      - ./services/url-shortener:/url-shortener
+      - ./services/url-shortener:/app
+      - /app/node_modules
     ports:
       - "3001:3000"
     environment:
-      DATABASE_URL: postgres://youruser:yourpassword@postgres:5432/yourdatabase
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_USERNAME: youruser
+      DATABASE_PASSWORD: yourpassword
+      DATABASE_NAME: yourdatabase
     depends_on:
       - postgres
 
@@ -29,13 +33,19 @@ services:
     build:
       context: .
       dockerfile: ./services/auth-service/Dockerfile
-    command: yarn run start:prod
+    command: yarn run start:dev
     volumes:
-      - ./services/auth-service:/auth-service
+      - ./services/auth-service:/app
+      - /app/node_modules
     ports:
       - "3002:3000"
     environment:
-      DATABASE_URL: postgres://youruser:yourpassword@postgres:5432/yourdatabase
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_USERNAME: youruser
+      DATABASE_PASSWORD: yourpassword
+      DATABASE_NAME: yourdatabase
+      JWT_SECRET: your_jwt_secret
     depends_on:
       - postgres
 
