chore: add JWT secret to UrlShortener module and update docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       DATABASE_USERNAME: youruser
       DATABASE_PASSWORD: yourpassword
       DATABASE_NAME: yourdatabase
+      JWT_SECRET: your_jwt_secret
     depends_on:
       - postgres
 
