feat: add environment variable validation and implement URL redirection endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       DATABASE_PASSWORD: yourpassword
       DATABASE_NAME: yourdatabase
       JWT_SECRET: your_jwt_secret
+      BASE_URL: http://localhost:3001
     depends_on:
       - postgres
 
