--- a/services/url-shortener/package.json
+++ b/services/url-shortener/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "migration:generate": "yarn typeorm migration:generate -d ./src/data-source.ts",
-    "migration:run": "yarn typeorm migration:run -d ./src/data-source.ts",
-    "migration:revert": "yarn typeorm migration:revert -d ./src/data-source.ts"
+    "migration:generate": "yarn typeorm migration:generate -d ./src/config/data-source.ts",
+    "migration:run": "yarn typeorm migration:run -d ./src/config/data-source.ts",
+    "migration:revert": "yarn typeorm migration:revert -d ./src/config/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
