--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,7 @@ services:
       DATABASE_USERNAME: youruser
       DATABASE_PASSWORD: yourpassword
       DATABASE_NAME: yourdatabase
-      JWT_SECRET: your_jwt_secret
-      BASE_URL: http://localhost:3001
+      BASE_URL: http://localhost:8080/
     depends_on:
       - postgres
 
