--- a/services/url-shortener/package.json
+++ b/services/url-shortener/package.json
@@ -21,7 +21,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "migration:generate": "yarn typeorm migration:generate -d ./src/config/data-source.ts",
     "migration:run": "yarn typeorm migration:run -d ./src/config/data-source.ts",
-    "migration:revert": "yarn typeorm migration:revert -d ./src/config/data-source.ts"
+    "migration:revert": "yarn typeorm migration:revert -d ./src/config/data-source.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
@@ -52,7 +53,9 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.4",
     "jest": "^29.5.0",
+    "lint-staged": "^15.2.8",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -78,5 +81,14 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,md,yml}": [
+      "prettier --write"
+    ]
   }
 }
