feat: add README.md

--- a/package.json
+++ b/package.json
@@ -5,5 +5,20 @@
   "workspaces": [
     "services/*"
   ],
-  "scripts": {}
+  "scripts": {
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,md,yml}": [
+      "prettier --write"
+    ]
+  }
 }
