--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       DATABASE_USERNAME: youruser
       DATABASE_PASSWORD: yourpassword
       DATABASE_NAME: yourdatabase
-      BASE_URL: http://localhost:3001/
+      BASE_URL: http://localhost:8000/
     depends_on:
       - postgres
     networks:
@@ -56,29 +56,27 @@ services:
     networks:
       - app-network
 
-  krakend:
-    image: devopsfaith/krakend:2.0
+  kong:
+    image: kong:3.0
+    environment:
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: /usr/local/kong/declarative/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      JWT_SECRET: your_jwt_secret
     volumes:
-      - ./krakend:/etc/krakend
+      - ./kong/declarative:/usr/local/kong/declarative
     ports:
-      - "8080:8080"
-    command: run -c /etc/krakend/krakend.json --port 8080
+      - "8000:8000"
+      - "8001:8001"
     depends_on:
       - auth-service
       - url-shortener
     networks:
       - app-network
-
-  swagger-ui:
-    image: swaggerapi/swagger-ui
-    ports:
-      - "8081:8080"
-    environment:
-      SWAGGER_JSON: /docs/swagger.json
-    volumes:
-      - ./docs:/docs
-    depends_on:
-      - krakend
 
 volumes:
   pgdata:
