--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "husky": "^9.1.4",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.8"
   },
   "lint-staged": {
