--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "services/*"
   ],
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.8"
+    "lint-staged": "^15.2.8",
+    "ts-jest": "^29.2.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
