--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   ],
   "scripts": {
     "prepare": "husky",
-    "test": "jest"
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.8",
-    "ts-jest": "^29.2.4"
+    "ts-jest": "^29.2.4",
+    "typescript": "^5.5.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
