--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: yourpassword
       POSTGRES_DB: yourdatabase
     ports:
-      - "5433:5432"
+      - '5433:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -20,8 +20,6 @@ services:
     volumes:
       - ./services/url-shortener:/app
       - /app/node_modules
-    ports:
-      - "3001:3000"
     environment:
       DATABASE_HOST: postgres
       DATABASE_PORT: 5432
@@ -43,7 +41,7 @@ services:
       - ./services/auth-service:/app
       - /app/node_modules
     ports:
-      - "3002:3000"
+      - '3002:3000'
     environment:
       DATABASE_HOST: postgres
       DATABASE_PORT: 5432
@@ -59,19 +57,19 @@ services:
   kong:
     image: kong:3.0
     environment:
-      KONG_DATABASE: "off"
+      KONG_DATABASE: 'off'
       KONG_DECLARATIVE_CONFIG: /usr/local/kong/declarative/kong.yml
       KONG_PROXY_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_ADMIN_LISTEN: '0.0.0.0:8001'
       JWT_SECRET: your_jwt_secret
     volumes:
       - ./kong/declarative:/usr/local/kong/declarative
     ports:
-      - "8000:8000"
-      - "8001:8001"
+      - '8000:8000'
+      - '8001:8001'
     depends_on:
       - auth-service
       - url-shortener
