--- a/services/auth-service/Dockerfile
+++ b/services/auth-service/Dockerfile
@@ -7,7 +7,7 @@ COPY ../../yarn.lock ./
 COPY ./services/auth-service/package.json ./
 
 # Instalar dependências de desenvolvimento
-RUN yarn install --frozen-lockfile
+RUN yarn install
 
 # Instalar o NestJS CLI globalmente
 RUN yarn global add @nestjs/cli
