--- a/services/url-shortener/package.json
+++ b/services/url-shortener/package.json
@@ -24,6 +24,7 @@
     "migration:revert": "yarn typeorm migration:revert -d ./src/config/data-source.ts"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.4.4",
     "@nestjs/common": "^10.3.10",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.10",
