--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   postgres:
     image: postgres:13
@@ -40,8 +42,6 @@ services:
     volumes:
       - ./services/auth-service:/app
       - /app/node_modules
-    ports:
-      - '3002:3000'
     environment:
       DATABASE_HOST: postgres
       DATABASE_PORT: 5432
