--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:cov": "jest --coverage"
   },
   "devDependencies": {
+    "nest": "^0.1.6",
+    "@nestjs/cli": "^10.4.4",
     "@types/jest": "^29.5.12",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
