--- a/services/url-shortener/package.json
+++ b/services/url-shortener/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nest": "^0.1.6",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -56,6 +57,7 @@
     "husky": "^9.1.4",
     "jest": "^29.5.0",
     "lint-staged": "^15.2.8",
+    "nest": "^0.1.6",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
